# bond

./: .gitignore  package.json  token.json
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  processor.rs  shared.rs  state.rs
program/tests/: lib.rs  process_init_trove.rs
public/: index.html
src/: App.styles.tsx  App.tsx  theme.ts
src/cli/: init.ts  util.ts
src/components/background/: background.tsx
src/components/bar/: bar.styles.tsx  bar.tsx
src/components/box/: box.tsx
src/components/button/: button.styles.tsx  button.tsx
src/components/input/: input.styles.tsx  input.tsx
src/components/nav/: nav.styles.tsx  nav.tsx
src/containers/home/: home.container.tsx  home.styles.tsx
src/containers/trove/: trove.container.tsx  trove.styles.tsx
src/context/: wallet.context.tsx
src/models/: model.tsx
src/models/api/: api.model.tsx  api.schema.tsx
src/models/trove/trove/: trove.model.tsx
src/models/wallet/: wallet.model.tsx
