
[package]
name = "solana-bpf-helloworld"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3.6"
borsh = "0.9.1"
borsh-derive = "0.8.1"
solana-program = "=1.7.12"
thiserror = "1.0.24"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
serde = "*"
switchboard-program = "0.1.45" # requires `rustc --version` >= 1.51.0
[dev-dependencies]
solana-program-test = "=1.7.12"
solana-sdk = "=1.7.12"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
arrayref = "0.3.6"
